--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </span>
         <span class="page flip">
           <div id='page-content'>
-            <p class='head'>Feliz dia de San Valentin Rossana ❤️</p>
+            <p class='head'>Feliz dia de San Valentin ❤️</p>
             <p>La vida sin ti es como<br> <span>HTML</span> sin <span>CSS</span></p>
           </div>
         </span>
