--- a/index.html
+++ b/index.html
@@ -1,39 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>CodePen - Proposicion</title>
+  <link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
-    <div class="book">
-        <span class="page flip">
+<!-- partial:index.partial.html -->
+<h1> Intenta darle a No</h1>
+<a href="#" class="button" id="sí">SÍ</a>
+<a href="#" class="button" id="no">NO</a>
+<!-- partial -->
+  <script  src="./script.js"></script>
 
-        </span>
-        <span class="page flip"></span>
-        <span class="page flip"></span>
-        <span class="page flip">
-            <div class="book-cover-heart">
-                <div id="heart2"></div>
-                <span class="ripple-effect"></span>
-            </div>
-        </span>
-        <span class="page flip">
-
-        </span>
-        <span class="page flip">
-          <div id='page-content'>
-            <p class='head'>Feliz dia de San Valentin ❤️</p>
-            <p>La vida sin ti es como<br> <span>HTML</span> sin <span>CSS</span></p>
-          </div>
-        </span>
-        <span class="book-cover"></span>
-        <span class="page"></span>
-        <span class="book-cover flip">
-
-        </span>
-      </div>
-      <script src="./app.js"></script>
 </body>
 </html>
