--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
-<div class="conteiner">
-<h1>2022</h1>
-<h2>HAPPY NEW YEAR</h2>  
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Happy New Year</title>
+  <link rel="stylesheet" href="style.css"> <!-- Enlace al archivo CSS -->
+</head>
+<body>
+  <div class="conteiner">
+    <h1>2024</h1> <!-- Cambié el año a 2024 -->
+    <h2>HAPPY NEW YEAR</h2>  
+  </div>
+</body>
+</html>
